[package]
name = "memory-store-example"
version = "0.1.0"
edition = "2021"

[dependencies]
userp = { path = "../../"}

askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.7"
axum-macros = "0.4.2"
dotenv = "0.15.0"
password-auth = "1.0.0"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["normalize-path", "trace"] }
tower-layer = "0.3.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
urlencoding = "2.1.3"
